<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="spencer.myfoodbudget.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/enterAmountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Enter amount spent:"
        android:textSize="28dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/amountSpentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/enterAmountText" />

    <Button
        android:id="@+id/restaurantButton"
        android:theme="@style/lightGreenButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/restaurant"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/amountSpentText"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/enterAmountText" />

    <Button
        android:id="@+id/groceryButton"
        android:theme="@style/lightGreenButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/grocery"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/amountSpentText"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/enterAmountText" />

    <TextView
        android:id="@+id/youHaveText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_have"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/restaurantButton" />

    <TextView
        android:id="@+id/remainingMoneyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="$41.25"
        android:textSize="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/youHaveText" />

    <TextView
        android:id="@+id/budgetedForText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/budgeted_for_the_next"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remainingMoneyText" />

    <TextView
        android:id="@+id/numDaysText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="12"
        android:textSize="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/budgetedForText" />

    <TextView
        android:id="@+id/daysText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="days"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numDaysText" />

</android.support.constraint.ConstraintLayout>
